feat: setting up the accent colour

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,7 +2,7 @@
 @import "@nuxt/ui";
 @import "./typography.css";
 
-@theme {
+@theme static {
     --ui-primary          : var(--theme-primary);
     --ui-secondary        : var(--theme-secondary);
 
