feat: updated padding on container and cta card styling

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -23,7 +23,23 @@ img {
 }
 
 .container {
-    padding: 0rem 20px;
+    padding: 0 16px;
+
+    @media (min-width: 640px) {
+        padding: 0 24px;
+    }
+
+    @media (min-width: 1024px) {
+        padding: 0 80px;
+    }
+
+    @media (min-width: 1280px) {
+        padding: 0 120px;
+    }
+
+    @media (min-width: 1536px) {
+        padding: 0 180px;
+    }
 }
 
 /* Page transitions */
